tests/Fase2-Semantic/error/t23-assignement_over_no_basic_type_var.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        aux var;
        var = x+b;
        return x;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
